<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/appbarMain"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_gravity="center">


            <LinearLayout
                android:id="@+id/lnSortBy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view">

                <LinearLayout
                    android:id="@+id/lnCurrentLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView">

                    <TextView
                        android:id="@+id/tv_current_location"
                        style="@style/TextViewStyleNormal.Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:paddingStart="4dp"
                        android:text="@string/urutkan" />

                    <TextView
                        android:id="@+id/tv_street_name"
                        style="@style/TextViewStyleNormal_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:drawablePadding="8dp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:paddingStart="4dp"
                        android:text="@string/semua" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:src="@drawable/ic_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lnSortBy"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/lnSortBy"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <View
                android:id="@+id/view"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:background="@color/colorGrayLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.41"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view">

                <LinearLayout
                    android:id="@+id/lnDeliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:gravity="left"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvDeliveryDate"
                        style="@style/TextViewStyleNormal.Gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingStart="4dp"
                        android:text="@string/pilih_grade" />

                    <TextView
                        android:id="@+id/tvDate"
                        style="@style/TextViewStyleNormal_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:drawablePadding="8dp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:paddingStart="4dp"
                        android:text="@string/semua" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.kennyc.view.MultiStateView
            android:id="@+id/msvProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint1"
            app:layout_constraintVertical_bias="0.0"
            app:msv_emptyView="@layout/empty_layout"
            app:msv_errorView="@layout/error_layout"
            app:msv_loadingView="@layout/product_layout_list_shimmper"
            app:msv_viewState="loading">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbars"
                app:layout_constraintVertical_bias="0.0" />


        </com.kennyc.view.MultiStateView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>